# AI_Threat_model_Hunt

./: .gitignore  Architectures for AI Agents in Threat Modeling and Threat Hunting.md  CLAUDE.md  IMPLEMENTATION_STRATEGY.md  README.md  conftest.py  pyproject.toml
.claude/agents/: debater-1.md  debater-2.md  orchestrator.md  researcher.md
.github/workflows/: ci.yml
debate/: 00_CONCLUSION.md  01_background_research.md  02_criteria.md  03_debate_log.md  04_round_results.md  05_final_architecture.md  06_red_team_review.md
eval/: README.md
eval/fcr/: __init__.py  metrics.py  mutations.py  run_fcr.py
eval/spike/: __init__.py  corpus.py  metrics.py  ranker.py  run_spike.py  sample_corpus.jsonl
examples/: run_d1.py  run_d1_from_threatdragon.py  run_d3.py  run_live.py  threat_dragon_sample.json
scripts/: fetch_attack.py  replay_trace.py
src/threat_agents/: __init__.py
src/threat_agents/common/: audit.py  checkpointer.py  config.py  injection_boundary.py  llm.py  schema.py  testing.py
src/threat_agents/common/grounding/: _seed_attack.json  artifact_store.py  kg.py  overlay.py  reference_index.py
src/threat_agents/common/integrations/: base.py  stubs.py
src/threat_agents/dispatcher/: __init__.py
src/threat_agents/graphs/d1_stride/: __init__.py  critic.py  graph.py  stride_matrix.py  threat_dragon.py
src/threat_agents/graphs/d3_attack_tree/: __init__.py  critic.py  graph.py  values.py
tests/: test_attack_tree_critic.py  test_audit_persist.py  test_checkpointer.py  test_cross_encoder.py  test_fcr.py  test_graphs.py  test_injection_boundary.py  test_reference_index.py  test_schema_audit.py  test_spike.py  test_stix_loader.py  test_stride_critic.py  test_stride_matrix.py  test_threat_dragon.py  test_tree_values.py
