[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-agents"
version = "0.1.0"
description = "AI agents for threat modeling & threat hunting — Stage 1 (D1 STRIDE/PASTA + D3 attack-trees). See IMPLEMENTATION_STRATEGY.md."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0,<2",
  "langgraph-checkpoint>=3,<4",
  "langgraph-checkpoint-sqlite>=3,<3.1",  # 3.1+ pulls checkpoint 4.x, which langgraph 1.0 rejects
  "langchain-anthropic>=1.0",
  "anthropic>=0.60",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
# Frozen non-LLM Tier-1 re-ranker (B4). Heavy (torch); only needed to run the cross-encoder backend.
crossencoder = ["sentence-transformers>=3,<6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# F = pyflakes (unused/undefined), I = import order. Stylistic rules (UP/B) left off for now.
select = ["F", "I"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"threat_agents.common.grounding" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]  # "." makes the top-level eval/ package importable in tests
testpaths = ["tests"]
